# hw-widgets

./: Cargo.toml  README.md  Trunk.toml  index.html  rustfmt.toml  styles.css
src/: app.rs  main.rs  router.rs  sensors.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: enums.rs  main.rs  sensors.rs  state.rs
src-tauri/src/tray/: events.rs  menu.rs  mod.rs
src/components/: mod.rs  settings.rs  widgets.rs
src/windows/: settings.rs  widgets.rs
